loong's code/leetcode/editor/cn/doc/submission/[42]接雨水388381615.txt
import numpy as np
class Solution:
    def trap(self, height: List[int]) -> int:
         def trap(self, height: List[int]) -> int:
        ans = 0
        left, right = 0, len(height) - 1
        leftMax = rightMax = 0

        while left < right:
            leftMax = max(leftMax, height[left])
            rightMax = max(rightMax, height[right])
            if height[left] < height[right]:
                ans += leftMax - height[left]
                left += 1
            else:
                ans += rightMax - height[right]
                right -= 1
        
        return ans
# runtime_error:IndentationError: unindent does not match any outer indentation level
           ^
    ans = 0
Line 5  (Solution.py)
# last_testcase:[0,1,0,2,1,0,1,3,2,1,2,1]
